# RDP-5

./: gradle.properties
.github/workflows/: main.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  hexrdp_jni.c
app/src/main/java/com/gotohex/rdp/data/db/: HexRdpDatabase.kt
app/src/main/java/com/gotohex/rdp/data/model/: RdpProfile.kt
app/src/main/java/com/gotohex/rdp/di/: AppModule.kt
app/src/main/java/com/gotohex/rdp/rdp/native/: AFreeRdpBridge.kt
app/src/main/java/com/gotohex/rdp/rdp/protocol/: RdpRemoteAdapter.kt
app/src/main/java/com/gotohex/rdp/remote/: RemoteSessionFactory.kt
app/src/main/java/com/gotohex/rdp/ssh/protocol/: SshClient.kt
app/src/main/java/com/gotohex/rdp/ui/components/: Components.kt
app/src/main/java/com/gotohex/rdp/ui/screens/: RdpSessionActivity.kt  RdpSessionService.kt  SettingsScreen.kt
app/src/main/java/com/gotohex/rdp/ui/screens/terminal/: TerminalScreen.kt
app/src/main/java/com/gotohex/rdp/ui/theme/: Theme.kt
app/src/main/java/com/gotohex/rdp/vnc/protocol/: VncClient.kt  VncKeysyms.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
gradle/: libs.versions.toml
